--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .button {
+    @apply p-2 my-5 bg-gray-900 rounded-md w-44 focus:outline-none;
+  }
+}
