--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,3 +7,16 @@
     @apply p-2 my-5 bg-gray-900 rounded-md w-44 focus:outline-none;
   }
 }
+
+#hideMeAfter5Seconds {
+  animation: hideAnimation 0s ease-in 3s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes hideAnimation {
+  to {
+    visibility: hidden;
+    width: 0;
+    height: 0;
+  }
+}
